--- a/Backend/apps/User/templates/register.html
+++ b/Backend/apps/User/templates/register.html
@@ -1,8 +1,12 @@
 {% extends 'User/' %}
 {% load static %}
-{% block content %}
 
-<form action="" method="POST">
-    {% csrf_token %}
-    {{form}}
+{% block custom_style %}
+{% endblock %}
+
+{% block content %}
+    <form action="" method="POST">
+        {% csrf_token %}
+        {{form}}
+    </form>
 {% endblock %}
