--- a/Backend/apps/User/templates/User/register.html
+++ b/Backend/apps/User/templates/User/register.html
@@ -2,12 +2,135 @@
 {% load crispy_forms_tags %}
 
 {% block custom_style %}
+.card-registration .select-input.form-control[readonly]:not([disabled]) {
+    font-size: 1rem;
+    line-height: 2.15;
+    padding-left: .75em;
+    padding-right: .75em;
+    }
+    .card-registration .select-arrow {
+    top: 13px;
+    }
+    <script>
+    function validateForm(){
+        let id = document.getElementById('id_person_id').value;
+        if(id.length != 13){ 
+            alert("กรอกบัตรประชาชนไม่ถูกต้อง");
+            return false;}
+        for(i=0, sum=0; i < 12; i++){
+            sum += parseFloat(id.charAt(i))*(13-i);} 
+        if((11-sum%11)%10!=parseFloat(id.charAt(12))){
+            alert("กรอกไม่บัตรประชาชนไม่ถูกต้อง");
+            return false; }
+        return true;}
+    </script>
 {% endblock %}
 
 {% block content %}
-    <form action="" method="POST">
+    <form action="" method="POST" onsubmit="return validateForm()">
         {% csrf_token %}
-        {{form}}
-        <input type="submit" name="Submit">
+    <section class="h-100 bg-light">
+                <div class="row g-0">
+                  
+                  <div class="col-xl-6">
+                    <div class="card-body p-md-5 text-black">
+                      <h3 class="mb-5 text-uppercase">Student registration form</h3>
+      
+                      <div class="row">
+                        <div class="col-md-6 mb-4">
+                          <div class="form-outline">
+                            {{form.first_name}}
+                            <label class="form-label" for="form3Example1m">First name</label>
+                          </div>
+                        </div>
+                        <div class="col-md-6 mb-4">
+                          <div class="form-outline">
+                            {{form.last_name}}
+                            <label class="form-label" for="form3Example1n">Last name</label>
+                          </div>
+                        </div>
+                      </div>
+      
+                      <div class="row">
+                        <div class="col-md-6 mb-4">
+                          <div class="form-outline">
+                            {{form.person_id}}
+                            <label class="form-label" for="form3Example1m1">Person ID</label>
+                          </div>
+                        </div>
+                        <div class="col-md-6 mb-4">
+                          <div class="form-outline">
+                            {{form.mobile}}
+                            <label class="form-label" for="form3Example1n1">Phone Number</label>
+                          </div>
+                        </div>
+                      </div>
+      
+                      <div class="form-outline mb-4">
+                        {{form.address}}
+                        <label class="form-label" for="form3Example8">Address</label>
+                      </div>
+      
+                      <div class="d-md-flex justify-content-start align-items-center mb- py-10">
+                          <h6 class="mb-4 me-4">Gender: </h6>
+                          {{form.sex}}
+      
+
+                      </div>
+      
+                      <div class="row">
+                        <div class="col-md-6 mb-4">
+      
+                          <select class="select">
+                            <option value="1">State</option>
+                            <option value="2">Option 1</option>
+                            <option value="3">Option 2</option>
+                            <option value="4">Option 3</option>
+                          </select>
+      
+                        </div>
+                        <div class="col-md-6 mb-4">
+      
+                  
+      
+                        </div>
+                      </div>
+      
+                      <div class="form-outline mb-4">
+                        {{form.email}}
+                        <label class="form-label" for="form3Example9">Email</label>
+                      </div>
+      
+                      <div class="form-outline mb-4">
+                        <input type="text" id="form3Example90" class="form-control form-control-lg" />
+                        <label class="form-label" for="form3Example90">Pincode</label>
+                      </div>
+      
+                      <div class="form-outline mb-4">
+                        <input type="text" id="form3Example99" class="form-control form-control-lg" />
+                        <label class="form-label" for="form3Example99">Course</label>
+                      </div>
+      
+                      <div class="form-outline mb-4">
+                        <input type="text" id="form3Example97" class="form-control form-control-lg" />
+                        <label class="form-label" for="form3Example97">Email ID</label>
+                      </div>
+      
+                      <div class="d-flex justify-content-end pt-3">
+                        <button type="button" class="btn btn-light btn-lg">Reset all</button>
+                        <button type="submit" class="btn btn-warning btn-lg ms-2" onclick="return confirm('ยืนยันส่งข้อมูล?')"><i class="fa fa-save"></i>Submit form</button>
+                      </div>
+      
+                    </div>
+                  </div>
+                  <div class="col-xl-6 d-none d-xl-block">
+                    <img src="https://i.ibb.co/2q4j1Tf/1.png"
+                        width="100%" 
+                        height="100%"
+                        alt="Sample photo" class="img-fluid"
+                        />
+                  </div>
+                </div>
+      </section>
     </form>
 {% endblock %}
