--- a/Backend/apps/User/templates/User/register.html
+++ b/Backend/apps/User/templates/User/register.html
@@ -27,9 +27,9 @@
 {% endblock %}
 
 {% block content %}
-    <form action="" method="POST" onsubmit="return validateForm()">
-        {% csrf_token %}
-    <section class="h-100 bg-light">
+<form action="" method="post" enctype="multipart/form-data" onsubmit="return validateForm()">
+  {%csrf_token%}
+  <section class="h-100 bg-light">
                 <div class="row g-0">
                   
                   <div class="col-xl-6">
@@ -74,51 +74,33 @@
                       <div class="d-md-flex justify-content-start align-items-center mb- py-10">
                           <h6 class="mb-4 me-4">Gender: </h6>
                           {{form.sex}}
-      
-
-                      </div>
-      
-                      <div class="row">
-                        <div class="col-md-6 mb-4">
-      
-                          <select class="select">
-                            <option value="1">State</option>
-                            <option value="2">Option 1</option>
-                            <option value="3">Option 2</option>
-                            <option value="4">Option 3</option>
-                          </select>
-      
-                        </div>
-                        <div class="col-md-6 mb-4">
-      
-                  
-      
-                        </div>
                       </div>
       
                       <div class="form-outline mb-4">
                         {{form.email}}
                         <label class="form-label" for="form3Example9">Email</label>
                       </div>
+    
       
                       <div class="form-outline mb-4">
-                        <input type="text" id="form3Example90" class="form-control form-control-lg" />
-                        <label class="form-label" for="form3Example90">Pincode</label>
+                        {{form.birth_day}}
+                        <label class="form-label" for="form3Example9">Birth Day</label>
                       </div>
       
+
                       <div class="form-outline mb-4">
-                        <input type="text" id="form3Example99" class="form-control form-control-lg" />
-                        <label class="form-label" for="form3Example99">Course</label>
+                        {{form.password}}
+                        <label class="form-label" for="form3Example9">Password</label>
                       </div>
-      
-                      <div class="form-outline mb-4">
-                        <input type="text" id="form3Example97" class="form-control form-control-lg" />
-                        <label class="form-label" for="form3Example97">Email ID</label>
+
+                      <div class="d-md-flex justify-content-start align-items-center mb- py-10">
+                        <h6 class="mb-4 me-4">Permission: </h6>
+                        {{form.permission}}
                       </div>
       
                       <div class="d-flex justify-content-end pt-3">
-                        <button type="button" class="btn btn-light btn-lg">Reset all</button>
-                        <button type="submit" class="btn btn-warning btn-lg ms-2" onclick="return confirm('ยืนยันส่งข้อมูล?')"><i class="fa fa-save"></i>Submit form</button>
+                        {% comment %} <button type="button" class="btn btn-light btn-lg">Reset all</button> {% endcomment %}
+                        <button type="submit" class="btn btn-warning btn-lg ms-2" onclick="return confirm('ยืนยันส่งข้อมูล?')"><i class="fa fa-save"></i> Submit form</button>
                       </div>
       
                     </div>
