--- a/Backend/apps/User/templates/User/profile.html
+++ b/Backend/apps/User/templates/User/profile.html
@@ -34,7 +34,7 @@
                   
                   <div class="col-xl-6">
                     <div class="card-body p-md-5 text-black">
-                      <h3 class="mb-5 text-uppercase">Registration form</h3>
+                      <h3 class="mb-5 text-uppercase">Student registration form</h3>
       
                       <div class="row">
                         <div class="col-md-6 mb-4">
@@ -106,11 +106,10 @@
                     </div>
                   </div>
                   <div class="col-xl-6 d-none d-xl-block">
-                    <img src="https://i.ibb.co/2q4j1Tf/1.png "
+                    <img src="https://i.ibb.co/2q4j1Tf/1.png"
                         width="100%" 
                         height="100%"
-                        alt="Sample photo" 
-                        style="object-fit:contain"
+                        alt="Sample photo" class="img-fluid"
                         />
                   </div>
                 </div>
