--- a/Backend/apps/Userdata/templates/User/registers.html
+++ b/Backend/apps/Userdata/templates/User/registers.html
@@ -2,15 +2,7 @@
 {% load crispy_forms_tags %}
 
 {% block custom_style %}
-.card-registration .select-input.form-control[readonly]:not([disabled]) {
-    font-size: 1rem;
-    line-height: 2.15;
-    padding-left: .75em;
-    padding-right: .75em;
-    }
-    .card-registration .select-arrow {
-    top: 13px;
-    }
+
     <script>
     function validateForm(){
         let id = document.getElementById('id_person_id').value;
@@ -35,67 +27,37 @@
                   <div class="col-xl-6">
                     <div class="card-body p-md-5 text-black">
                       <h3 class="mb-5 text-uppercase">Registration form</h3>
-      
                       <div class="row">
                         <div class="col-md-6 mb-4">
                           <div class="form-outline">
-                            {{form.first_name}}
-                            <label class="form-label" for="form3Example1m">First name</label>
-                          </div>
-                        </div>
-                        <div class="col-md-6 mb-4">
-                          <div class="form-outline">
-                            {{form.last_name}}
-                            <label class="form-label" for="form3Example1n">Last name</label>
-                          </div>
-                        </div>
-                      </div>
-      
-                      <div class="row">
-                        <div class="col-md-6 mb-4">
-                          <div class="form-outline">
-                            {{form.person_id}}
+                            {{form.as_p}}
                             <label class="form-label" for="form3Example1m1">Person ID</label>
                           </div>
                         </div>
                         <div class="col-md-6 mb-4">
                           <div class="form-outline">
-                            {{form.mobile}}
+                            {% comment %} {{form.permission}} {% endcomment %}
                             <label class="form-label" for="form3Example1n1">Phone Number</label>
                           </div>
                         </div>
                       </div>
-      
                       <div class="form-outline mb-4">
-                        {{form.address}}
+                        {% comment %} {{form.address}} {% endcomment %}
                         <label class="form-label" for="form3Example8">Address</label>
                       </div>
       
                       <div class="d-md-flex justify-content-start align-items-center mb- py-10">
                           <h6 class="mb-4 me-4">Gender: </h6>
-                          {{form.sex}}
+                          {% comment %} {{form.sex}} {% endcomment %}
                       </div>
       
                       <div class="form-outline mb-4">
-                        {{form.email}}
-                        <label class="form-label" for="form3Example9">Email</label>
-                      </div>
-    
-      
-                      <div class="form-outline mb-4">
-                        {{form.birth_day}}
+                        {% comment %} {{form.birth_day}} {% endcomment %}
                         <label class="form-label" for="form3Example9">Birth Day</label>
-                      </div>
-      
-
-                      <div class="form-outline mb-4">
-                        {{form.password}}
-                        <label class="form-label" for="form3Example9">Password</label>
-                      </div>
 
                       <div class="d-md-flex justify-content-start align-items-center mb- py-10">
                         <h6 class="mb-4 me-4">Permission: </h6>
-                        {{form.permission}}
+                        {% comment %} {{form.permission}} {% endcomment %}
                       </div>
       
                       <div class="d-flex justify-content-end pt-3">
