--- a/Backend/apps/Userdata/templates/User/profile.html
+++ b/Backend/apps/Userdata/templates/User/profile.html
@@ -19,75 +19,63 @@
 {% endblock %}
 
 {% block content %}
-<form action="" method="post" enctype="multipart/form-data" onsubmit="return validateForm()">
-  {%csrf_token%}
-  <section class="h-100 bg-light">
+{% if form.errors %}
+    {% for field in form %}
+        {% for error in field.errors %} 
+        <div class="alert alert-danger">
+            <strong>{{ field.name }} {{ error|escape }}</strong>
+        </div>
+        {% endfor %}
+        {% endfor %}
+        {% endif %}
+  <form action="" method="post" enctype="multipart/form-data" onsubmit="return validateForm()">
+    {%csrf_token%}
+      <section class="h-100 bg-light">
                 <div class="row g-0 ">
                   <div class="col-xl-5">
                     <div class="card-body p-md-5 text-black ">
                       <div class="d-flex justify-content-center pt-3">
-                      <h3 class="mb-5 text-uppercase">Registration form</h3>
+                      <h3 class="mb-5 text-uppercase">Profile</h3>
                       </div>
-                      <div class="d-flex justify-content-center pt-3">
-                        <div class="col-md-6 mb-4 ">
-                          <div class="form-outline">
+                          <div class="row">
+                          <div class="col-md-6 mb-4">
+                            <div class="form-outline">
+                              {{form.first_name}}
+                              <label class="form-label" for="form3Example1">First name</label>
+                            </div>
+                          </div>
+                          <div class="col-md-6 mb-4">
+                            <div class="form-outline">
+                              {{form.last_name}}
+                              <label class="form-label" for="form3Example2">Last name</label>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="form-outline mb-4">
+                          {{form.address}}
+                          <label class="form-label" for="form3Example3">Address</label>
+                        </div>
+                        <div class="form-outline mb-4">
+                          {{form.mobile}}
+                          <label class="form-label" for="form3Example3">Phonenumber</label>
+                        </div>
+                          <div class="form-outline mb-4">
                             {{form.email}}
-                            <label class="form-label" for="form3Example1m">Email</label>
+                            <label class="form-label" for="form3Example3">Email address</label>
                           </div>
-                        </div>
-                        </div>
-                        <div class="d-flex justify-content-center pt-3">
-                        <div class="col-md-6 mb-4">
-                          <div class="form-outline">
-                            {{form.first_name}}
-                            <label class="form-label" for="form3Example1m">First name</label>
-                          </div>
-                        </div>
-                        </div>
-                        <div class="d-flex justify-content-center pt-3">
-                        <div class="col-md-6 mb-4">
-                          <div class="form-outline">
-                            {{form.last_name}}
-                            <label class="form-label" for="form3Example1n">Last name</label>
-                          </div>
-                        </div>
-                        </div>
-                        <div class="d-flex justify-content-center pt-3">
-                        <div class="col-md-6 mb-4">
-                          <div class="form-outline">
-                          {{form.email}}
-                          <label class="form-label" for="form3Example1n">Email</label>
-                        </div>
-                        </div>
-                        </div>
-                        <div class="d-flex justify-content-center pt-3">
-                        <div class="col-md-6 mb-4">
-                          <div class="form-outline">
+                          <div class="form-outline mb-4">
                           {{form.password1}}
                           <label class="form-label" for="form3Example1n">Password</label>
-                        </div>
-                        </div>
-                        </div>
-                        <div class="d-flex justify-content-center pt-3">
-                        <div class="col-md-6 mb-4">
-                          <div class="form-outline">
+                          </div>
+
+                          <div class="form-outline mb-4">
                           {{form.password2}}
                           <label class="form-label" for="form3Example1n">Confirm-Password</label>
                         </div>
-                        </div>
-                        </div>
-                        <div class="d-flex justify-content-center pt-3">
-                        <div class="col-md-6 mb-4">
-                          <div class="form-outline">
-                          {{form.groups}}
-                          <label class="form-label" for="form3Example1n">Permission</label>
-                        </div>
-                        </div>
-                        </div>
-                        <div class="d-flex justify-content-center pt-3">
+                        <div class = "d-flex justify-content-center pt-3">
                           <button type="submit" class="btn btn-warning btn-lg ms-2" onclick="return confirm('ยืนยันส่งข้อมูล?')"><i class="fa fa-save"></i> Submit form</button>
+                          </div>
                         </div>
-                      </div>
                     </div>
                     <div class="col-xl-7 d-none d-xl-block">
                       <img src="https://i.ibb.co/2q4j1Tf/1.png"
@@ -98,6 +86,7 @@
                   </div>
                   </div>
                   
+                                    
       </section>
     </form>
 {% endblock %}
