--- a/Backend/apps/Userdata/templates/User/register.html
+++ b/Backend/apps/Userdata/templates/User/register.html
@@ -19,6 +19,15 @@
 {% endblock %}
 
 {% block content %}
+{% if form.errors %}
+    {% for field in form %}
+        {% for error in field.errors %} 
+        <div class="alert alert-danger">
+            <strong>{{ field.name }} {{ error|escape }}</strong>
+        </div>
+        {% endfor %}
+        {% endfor %}
+        {% endif %}
   <form action="" method="post" enctype="multipart/form-data" onsubmit="return validateForm()">
     {%csrf_token%}
       <section class="h-100 bg-light">
