--- a/Backend/templates/headerfooter.html
+++ b/Backend/templates/headerfooter.html
@@ -83,21 +83,30 @@
   <body>
     <header>
       <nav class="navbar navbar-expand navbar-light fixed-top navbar-custom">
-          <a class="navbar-brand" href="#">EVGO</a>
+          <a class="navbar-brand" href="/">EVGO</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ms-auto">
-              <li class="nav-item active">
-                <a class="nav-link" href="/">Home</a>
+              {% if request.user.is_authenticated %}
+              <li class="nav-item">
+                <a class="nav-link" href="/User/login/">Home</a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/User/profile/" >Profile</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/User/logout/">Logout</a>
+              </li>
+              {% else %}
               <li class="nav-item">
                 <a class="nav-link" href="/User/register/" >Sign up</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="/User/login/" >Sign in</a>
               </li>
+              {% endif %}
           </div>
       </nav>
       
