--- a/Backend/apps/Userdata/templates/User/change_password.html
+++ b/Backend/apps/Userdata/templates/User/change_password.html
@@ -3,9 +3,11 @@
 {% block title %}Sing in{% endblock %}
 {% block custom_style %}
     <style>
+        input.form-control {
+            class: form-control form-control-lg;
+          }
     </style>
     <script>
-      
     </script>
 {% endblock %}
 
@@ -22,16 +24,24 @@
                       <div class="d-flex justify-content-center pt-3">
                         <div class="col-md-6 mb-4">
                           <div class="form-outline">
-                            {{form.email}}
-                            <label class="form-label" for="form3Example1m">Email</label>
+                            {{ form.old_password }}
+                            <label class="form-label" for="form3Example1">Old Password</label>
                           </div>
                         </div>
                         </div>
-                        <div class="d-flex justify-content-center pt-3">
+                      <div class="d-flex justify-content-center pt-3">
                         <div class="col-md-6 mb-4">
                           <div class="form-outline">
-                            {{form.password}}
-                            <label class="form-label" for="form3Example1m">Password</label>
+                            {{ form.new_password1 }}
+                            <label class="form-label" for="form3Example1">New Password</label>
+                          </div>
+                        </div>
+                        </div>
+                      <div class="d-flex justify-content-center pt-3">
+                        <div class="col-md-6 mb-4">
+                          <div class="form-outline">
+                            {{ form.new_password2 }}
+                            <label class="form-label" for="form3Example1">Confirm Password</label>
                           </div>
                         </div>
                         </div>
