--- a/Backend/apps/sa/templates/sa/sa_list_view.html
+++ b/Backend/apps/sa/templates/sa/sa_list_view.html
@@ -5,6 +5,7 @@
 {% block custom_style %}
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 <style>
+  
     th{
         text-align: center;
     }
@@ -42,7 +43,8 @@
 {% endblock %}
 
 {% block content %}
-<div class="container mt-2"> 
+
+<div class="container mt-2 p-5"> 
     <div class = "row">
         <div class = "col-6">
             {% comment %} <button type="button" class="btn btn-success px-3" onclick="javascript:location.href='{% url 'Patient:CreateNew'%}'"><i class="fa fa-plus"></i> เพิ่มการคืนรถ</button> {% endcomment %}
@@ -50,7 +52,7 @@
         <div class = "col-6 text-end">
             {% comment %} <button type="button" class="btn btn-success px-3" onclick="javascript:location.href='{% url 'Patient:RadioWorkbook' %}'"><i class="fa fa-file-excel"></i></button> {% endcomment %}
             <button type="button" class="btn btn-secondary px-3" onclick="javascript:location.href='{% url 'admin:index' %}'"><i class="fa fa-gear"></i></button>
-            <button type="button" class="btn btn-warning px-3" onclick="javascript:location.href='{% url 'apps.Userdata:logout' %}'"><i class="fa fa-sign-out" aria-hidden="true"></i></button>
+            {% comment %} <button type="button" class="btn btn-warning px-3" onclick="javascript:location.href='{% url 'apps.Userdata:logout' %}'"><i class="fa fa-sign-out" aria-hidden="true"></i></button> {% endcomment %}
         </div>
     </div>
     <table class="table table-bordered table-striped mt-2">
