--- a/Backend/apps/News/templates/News/Home.html
+++ b/Backend/apps/News/templates/News/Home.html
@@ -3,6 +3,14 @@
 {% load static %}
 {% block custom_style %}
 <style>
+
+  .fixed-top-2 {
+    margin-top: 56px;
+    }
+
+    body {
+        padding-top: 70px;
+    }
   h1 {
     font-size: 70px;
     color:#616161;
@@ -76,14 +84,14 @@
     height:100px;
   }
   
+  .navbar-nav {
+    display: flex;
+    justify-content: center;
+  }
+
+  
   
 </style>
-
-
-
-
-
-
 
 
 
@@ -92,43 +100,44 @@
 
 
 {% block content %}
-<nav class="navbar navbar-expand-lg navbar-light " style=" background-color: #B8FFD5;" >
+<nav class="navbar navbar-expand-lg navbar-light fixed-top fixed-top-2" style=" background-color: #B8FFD5;">
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
-    <div>
-      <div class="collapse navbar-collapse " id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item active">
-            <a class="nav-link" href="#Why" >Why EVGO? <span class="sr-only">(current)</span></a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#How it Works">How it Works</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#Promotions">Promotions & Activities</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#Download">Download</a>
-          </li>
-        </ul>
-      </div>
-    </div>
+  <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
+    <ul class="navbar-nav">
+      <li class="nav-item">
+        <a class="nav-link" href="#Why">Why EVGO?</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#How it Works">How it Works</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#Promotions">Promotions & Activities</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#Download">Download</a>
+      </li>
+    </ul>
+  </div>
 </nav>
-    <div class="container imgpadding" id = "Why">
+    <div class="container imgpadding " id = "Why">
       <img src="https://i.ibb.co/3zYQ7yz/download.jpg"
-          width="100%" 
-          height="100%"
-          alt="Sample photo" 
-          style="object-fit:contain "
-          class = "rounded-imgmain"
-          />
+      width="100%" 
+      height="100%"
+      alt="Sample photo" 
+      style="object-fit:contain "
+      class = "rounded-imgmain"
+      />
     </div>
-    <br>
+  
+    <br >
     <br>
 
-    <div class ="container " id = "">
-      <h1 id = "How it Works">How it Works</h1>
+    <div >
+    </div>
+    <div class ="container " >
+      <h1 >How it Works</h1>
     </div>
 
     <div class="container" >
@@ -186,8 +195,8 @@
           <img class="card-img-top rounded-imgnews " src="https://i.ibb.co/3zYQ7yz/download.jpg" alt="Card image cap" >
           <div class="card-body">
           
-            <h5 class="card-title">Card title that wraps to a new line</h5>
-            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            <h5 class="card-title">Promotions & Activities1</h5>
+            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Morbi quis commodo odio aenean sed adipiscing. Praesent semper feugiat nibh sed pulvinar.</p>
           </div>
         </a>
         </div>
@@ -196,8 +205,8 @@
           <img class="card-img-top rounded-imgnews " src="https://i.ibb.co/3zYQ7yz/download.jpg" alt="Card image cap" >
           <div class="card-body">
           
-            <h5 class="card-title">Card title that wraps to a new line</h5>
-            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            <h5 class="card-title">Promotions & Activities2</h5>
+            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Morbi quis commodo odio aenean sed adipiscing. Praesent semper feugiat nibh sed pulvinar.</p>
           </div>
         </a>
         </div>
@@ -206,25 +215,25 @@
           <img class="card-img-top rounded-imgnews " src="https://i.ibb.co/3zYQ7yz/download.jpg" alt="Card image cap" >
           <div class="card-body">
           
-            <h5 class="card-title">Card title that wraps to a new line</h5>
-            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            <h5 class="card-title">Promotions & Activities3</h5>
+            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Morbi quis commodo odio aenean sed adipiscing. Praesent semper feugiat nibh sed pulvinar.</p>
           </div>
         </a>
         </div>
       </div>
    
-  
-        <div class="container imgpadding" id = "Download">
-        <div class="Bg">
-          <div class ="Backgroundpic download" >
-            <!-- <div class="download"> -->
-              <img src="https://www.fcsok.org/wp-content/uploads/2020/04/get-it-on-google-play-badge.png" class="rounded-imgmaind">
-              <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3c/Download_on_the_App_Store_Badge.svg/2560px-Download_on_the_App_Store_Badge.svg.png" class="rounded-imgnewsd">
-            <!-- </div> -->
-            
-          </div>
-          </div>
+      
+      <div class="container imgpadding" id = "Download">
+      <div class="Bg">
+        <div class ="Backgroundpic download" >
+          <!-- <div class="download"> -->
+            <img src="https://www.fcsok.org/wp-content/uploads/2020/04/get-it-on-google-play-badge.png" class="rounded-imgmaind">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3c/Download_on_the_App_Store_Badge.svg/2560px-Download_on_the_App_Store_Badge.svg.png" class="rounded-imgnewsd">
+          <!-- </div> -->
+          
         </div>
+        </div>
+      </div>
 
 
       
