--- a/Backend/apps/Userdata/templates/User/profile.html
+++ b/Backend/apps/Userdata/templates/User/profile.html
@@ -2,7 +2,8 @@
 {% load crispy_forms_tags %}
 {% block title %}Profile{% endblock %}
 {% block custom_style %}
-    
+<style>
+</style>
     <script>
     function validateForm(){
         let id = document.getElementById('id_person_id').value;
@@ -28,6 +29,7 @@
         {% endfor %}
         {% endfor %}
         {% endif %}
+  
   <form action="" method="post" enctype="multipart/form-data" onsubmit="return validateForm()">
     {%csrf_token%}
       <section class="h-100 bg-light">
@@ -63,15 +65,6 @@
                             {{form.email}}
                             <label class="form-label" for="form3Example3">Email address</label>
                           </div>
-                          <div class="form-outline mb-4">
-                          {{form.password1}}
-                          <label class="form-label" for="form3Example1n">Password</label>
-                          </div>
-
-                          <div class="form-outline mb-4">
-                          {{form.password2}}
-                          <label class="form-label" for="form3Example1n">Confirm-Password</label>
-                        </div>
                         <div class = "d-flex justify-content-center pt-3">
                           <button type="submit" class="btn btn-warning btn-lg ms-2" onclick="return confirm('ยืนยันส่งข้อมูล?')"><i class="fa fa-save"></i> Submit form</button>
                           </div>
@@ -85,8 +78,7 @@
                       />
                   </div>
                   </div>
-                  
-                                    
       </section>
     </form>
+    
 {% endblock %}
